# rustbin

./: .env  Cargo.toml  Dockerfile  README.md  pastes.db  render.yaml  Копия_блокнота_"Корректная_оценка_ipynb".ipynb
src/: handlers.rs  main.rs  models.rs  storage.rs
templates/: index.html  paste.html
